# easyflex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  pypi.yaml
easyflex/: __init__.py  api.py  easyflex.py  exceptions.py  functions.py  run_settings.py  utils.py
easyflex/dataservices/: functions.py  import_modules.py  soap_request.py
easyflex/dataservices/ds_bi_declaratieregels/: fields.py  format.py  pull_data.py
easyflex/dataservices/ds_fw_arbeidscontract/: fields.py  format.py  pull_data.py
easyflex/dataservices/ds_fw_fase_details/: fields.py  format.py  pull_data.py
easyflex/dataservices/ds_fw_fases/: format.py  pull_data.py
easyflex/dataservices/ds_fw_huidige_fase/: format.py  pull_data.py
easyflex/dataservices/ds_fw_journaalposten/: format.py  pull_data.py
easyflex/dataservices/ds_fw_loonjournaal/: format.py  pull_data.py
easyflex/dataservices/ds_fw_loonspecificatie/: azure.py  pull_data.py
easyflex/dataservices/ds_fw_loonspecificatiegegevens/: fields.py  format.py  pull_data.py
easyflex/dataservices/ds_fw_memovelden/: fields.py  format.py  pull_data.py
easyflex/dataservices/ds_fw_persoonsgegevens_all/: fields.py  format.py  pull_data.py
easyflex/dataservices/ds_fw_persoonsgegevens_comm/: fields.py  format.py  pull_data.py
easyflex/dataservices/ds_fw_reservering_update/: functions.py  insert_update.py
easyflex/dataservices/ds_fw_reserveringen/: format.py  pull_data.py
easyflex/dataservices/ds_fw_wwpremie/: format.py  pull_data.py
easyflex/dataservices/ds_rf_declaraties_all/: format.py  pull_data.py
easyflex/dataservices/ds_rf_declaraties_perioden/: format.py  pull_data.py
easyflex/dataservices/ds_rl_bedrijfsgegevens/: format.py  pull_data.py
easyflex/dataservices/ds_rl_fw_uren/: format.py  (+1 more)
easyflex/tests/: test_dataservices.py
(+14 files in other folders)
