[metadata]
name = easyflex
version = 0.0.19
author = Melvin Folkers, Erfan Nariman
author_email = hello@zypp.io
description = Python project voor het ontsluiten van data met de Easyflex API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, easyflex, API
url = https://github.com/zypp-io/easyflex
project_urls =
    Bug Tracker = https://github.com/zypp-io/easyflex/issues
    Source = https://github.com/zypp-io/easyflex
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = easyflex
python_requires = >=3.6
install_requires =
    pandas==1.3.2
    requests==2.26.0
    tqdm==4.62.1

[flake8]
statistics = True
count = True
max-complexity=10
max-line-length=120
per-file-ignores=
    __init__.py: F401
    easyflex/api.py: C901

[isort]
line_length=120
